--- a/style/drone.scss
+++ b/style/drone.scss
@@ -466,10 +466,19 @@ $vertical:center;
     }
 }
 
-@media(min-width:667px) and (max-width:667px){
+@media(min-width:667px) and (max-width:668px){
     .principal-container{
         .container{
             height: auto;
+            .section{
+                .content-principal{
+                    .portal{
+                        img{
+                            width: 100%;
+                        }
+                    }
+                }
+            }
         }
     }
 }
